# iescan

./: .gitignore  README.md  SAST_REPORT.md  pyproject.toml  sample_config.yaml
src/iescan/: __init__.py  cli.py  config.py
src/iescan/core/: __init__.py  agent.py  auth.py  reasoning.py  reporter.py  scanner.py
src/iescan/mcp/: __init__.py  server.py
src/iescan/modules/: __init__.py
src/iescan/modules/ad/: __init__.py  enumeration.py  gpo.py  kerberos.py  trusts.py
src/iescan/modules/database/: __init__.py  common.py  mssql.py
src/iescan/modules/erp/: __init__.py  sap.py
src/iescan/modules/network/: __init__.py  discovery.py  services.py  shares.py
src/iescan/modules/privesc/: __init__.py  pathfinder.py
src/iescan/utils/: __init__.py  ldap.py  network.py
